--- a/inheritance.ipynb
+++ b/inheritance.ipynb
@@ -120,70 +120,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\rams\\projcet\\inheritance.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 31>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m ensemble_model \u001b[39m=\u001b[39m VotingRegressor(estimator\u001b[39m=\u001b[39m[model1, model2, model3], n_estimators\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39m# Train the ensemble model\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m ensemble_model\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39m# Evaluate the ensemble model\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m y_pred \u001b[39m=\u001b[39m ensemble_model\u001b[39m.\u001b[39mpredict(X_test)\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\site-packages\\torchensemble\\voting.py:384\u001b[0m, in \u001b[0;36mVotingRegressor.fit\u001b[1;34m(self, train_loader, epochs, log_interval, test_loader, save_model, save_dir)\u001b[0m\n\u001b[0;32m    371\u001b[0m \u001b[39m@torchensemble_model_doc\u001b[39m(\n\u001b[0;32m    372\u001b[0m     \u001b[39m\"\"\"Implementation on the training stage of VotingRegressor.\"\"\"\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mfit\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    373\u001b[0m )\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    381\u001b[0m     save_dir\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    382\u001b[0m ):\n\u001b[1;32m--> 384\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_parameters(epochs, log_interval)\n\u001b[0;32m    385\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_outputs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_decide_n_outputs(train_loader)\n\u001b[0;32m    387\u001b[0m     \u001b[39m# Instantiate a pool of base estimators, optimizers, and schedulers.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\lib\\site-packages\\torchensemble\\_base.py:125\u001b[0m, in \u001b[0;36mBaseModule._validate_parameters\u001b[1;34m(self, epochs, log_interval)\u001b[0m\n\u001b[0;32m    122\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_parameters\u001b[39m(\u001b[39mself\u001b[39m, epochs, log_interval):\n\u001b[0;32m    123\u001b[0m     \u001b[39m\"\"\"Validate hyper-parameters on training the ensemble.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 125\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m epochs \u001b[39m>\u001b[39;49m \u001b[39m0\u001b[39;49m:\n\u001b[0;32m    126\u001b[0m         msg \u001b[39m=\u001b[39m (\n\u001b[0;32m    127\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThe number of training epochs should be strictly positive\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    128\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39m, but got \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m instead.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    129\u001b[0m         )\n\u001b[0;32m    130\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39merror(msg\u001b[39m.\u001b[39mformat(epochs))\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'list' and 'int'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torchensemble import VotingRegressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from torchensemble import VotingRegressor\n",
+    "\n",
+    "# Define your base models\n",
     "model1 = nn.Sequential(\n",
     "    nn.Linear(10, 5),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(5, 1),\n",
-    "    nn.Sigmoid()\n",
+    "    nn.Linear(5, 1)\n",
     ")\n",
     "\n",
     "model2 = nn.Sequential(\n",
     "    nn.Linear(10, 10),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(10, 1),\n",
-    "    nn.Sigmoid()\n",
+    "    nn.Linear(10, 1)\n",
     ")\n",
     "\n",
     "model3 = nn.Sequential(\n",
     "    nn.Linear(10, 20),\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(20, 1),\n",
-    "    nn.Sigmoid()\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'models'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\user\\rams\\projcet\\inheritance.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ensemble_model \u001b[39m=\u001b[39m VotingClassifier(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     models\u001b[39m=\u001b[39;49m[model1, model2, model3],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     cuda_device\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m,  \u001b[39m# Use GPU if available\u001b[39;49;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     n_classes\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     ensemble_size\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     criterion\u001b[39m=\u001b[39;49mnn\u001b[39m.\u001b[39;49mBCELoss(),\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     optimizer\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49moptim\u001b[39m.\u001b[39;49mAdam,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     optimizer_params\u001b[39m=\u001b[39;49m{\u001b[39m\"\u001b[39;49m\u001b[39mlr\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39m0.001\u001b[39;49m},\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     batch_size\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     validation_split\u001b[39m=\u001b[39;49m\u001b[39m0.2\u001b[39;49m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/user/rams/projcet/inheritance.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m )\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'models'"
-     ]
-    }
-   ],
-   "source": [
+    "    nn.Linear(20, 1)\n",
+    ")\n",
+    "\n",
+    "X_train, y_train = [[1,0],[-1,2]], [2,1]\n",
+    "X_test, y_test = [[1,0],[-1,2]], [2,1]\n",
+    "\n",
     "# Create an instance of the VotingRegressor\n",
-    "ensemble_model = VotingRegressor(estimators=[model1, model2, model3])\n",
+    "ensemble_model = VotingRegressor(estimator=[model1, model2, model3], n_estimators=3)\n",
     "\n",
     "# Train the ensemble model\n",
     "ensemble_model.fit(X_train, y_train)\n",
     "\n",
     "# Evaluate the ensemble model\n",
     "y_pred = ensemble_model.predict(X_test)\n",
-    "mse = mean_squared_error(y_test, y_pred)"
+    "mse = torch.nn.functional.mse_loss(y_test, y_pred)"
    ]
   },
   {
